# gar-vertex-integration

./: .gitignore  README.md  base_image_build.sh  index.py  pipeline_run.sh  py_package_build.sh  requirements.txt
gar_base_image/: .pypirc.snippet  Dockerfile  cloudbuild.yaml  pip.conf.snippet  requirements.txt
gar_example_package/: cloudbuild.yaml  pyproject.toml  requirements.txt
gar_example_package/src/: example.py
pipeline/: pipeline.py  pipeline.yaml  pipeline_runner.py
scripts/: gar_image_build_and_upload.sh  py_build_and_upload.sh  run_pipeline.sh  setup.sh
